# aecs-top-down-game-engine

./: CMakeLists.txt  DEPENDS.txt  Makefile  README.markdown  ai.c  ai.h  aiFun.h  aiTable.h  array.c  array.h  basic.c  basic.h  brush.h  code.c  definitions.h  engine.c  engine.h  game.c  level-editor-usage.dot  level-editor.c  level-editor.h  linkedList.c  linkedList.h  log.h  map.c  map.h  object.c  object.h  queue.h  sdl-helpers.c  sdl-helpers.h  stack.h  templates.csv  text.c  text.h  texture.c  texture.h  vector.c  vector.h
ai/: aiCommon.c  creeperPlant.c  hungryLeftTurner.c  hungryLeftTurner.h  leftTurner.c  leftTurner.h  peekaboo.c  simpleFlower.c  weepingAngel.c  weepingAngel.h
doc/: scripting.html  scripting.markdown
doc/ai-models/: README.txt  left-turner.dot
fov/: fov-line.c  fov-raycast.c  fov-rough.c  fov-util.c  fov.h
pf/: roughAStar.c  roughAStar.h
plot-drafts/: bilgisayara-giren-adam.txt
res/: sprite-sheet-template.xcf
sdl2gui/: gui-test.c  sdl2gui-list.c  sdl2gui-list.h  sdl2gui.c  sdl2gui.h
src/: CMakeLists.txt  ai.c  ai.h  aiFun.h  aiTable.h  array.h  audio.c  audio.h  basic.h  customEventTypes.h  cutscene.c  cutscene.h  definitions.h  dsl.c  dsl.h  engine.c  engine.h  game.c  game.h  guiHelpers.h  inventory.c  inventory.h  level-editor.c  levelEditor.h  linkedList.c  linkedList.h  map.c  map.h  mapCreator.c  move.h  object.c  object.h  queue.h  templates.c  templates.h  text.c  text.h  textConsole.c  textConsole.h  texture.c  (+3 more)
src/ai/: ai.c  ai.h  aiFun.h  aiTable.h  creeperPlant.c  door.c  door.h  escaper.c  escaper.h  lineSensor.c  peekaboo.c  simpleFlower.c  switch.c  switch.h  weepingAngel.c
src/ai/modules/: creeperPlant.c  creeperPlant.h  escaper.c  hungryLeftTurner.c  leftTurner.h  lineSensor.c  lineSensor.h  peekaboo.c  peekaboo.h  simpleFlower.c  simpleFlower.h  weepingAngel.c
src/cmake-modules/: FindSDL2_mixer.cmake
src/collection/: linkedList.c  linkedList.h
src/core/: audio.c  audio.h  engine.c  engine.h  map.c  map.h  object.c  object.h  texture.c  texture.h
src/dsl/: c_code.c
src/editor-brushes/: ai.c  ai.h  brush.h  brushes.c  move.h  object.c  object.h  rotate.c  templates.c  templates.h  terrain.c  terrain.h
src/fov/: fov-diamond.c  fov-line.c  fov-raycast.c  fov-rough.c  fov-util.c  fov.h
src/jsmn/: README.md
src/level-editor/: ai.c  brush.h  brushes.c  guiHelpers.c  level-editor.c  levelEditor.h  mapCreator.c  mapCreator.h  object.c  object.h  rotate.c  rotate.h  templates.c  templates.h  terrain.c  terrain.h
src/level-editor/dialogs/: mapCreator.c  mapCreator.h
src/level-editor/editor-brushes/: brush.h  brushes.c  move.c  templates.c  texture.c  texture.h
src/pf/: roughAStar.c  roughAStar.h  roughAStar_depthLimited.c  roughAStar_depthLimited.h
src/sdl2gui/: .sdl2gui-panel.c.swp  sdl2gui-check.c  sdl2gui-check.h  sdl2gui-element.c  sdl2gui-element.h  sdl2gui-list.c  sdl2gui-list.h  sdl2gui-panel.c  sdl2gui-panel.h  sdl2gui-text.c  sdl2gui-text.h  sdl2gui-textbox.c  sdl2gui-textbox.h  sdl2gui-virtual.c  sdl2gui-virtual.h  sdl2gui.c  sdl2gui.h
src/sdl2gui/widgets/: dirUtils.c  dirUtils.h  filePicker.c  filePicker.h
src/texture/: spriteSpecs.c  spriteSpecs.h  textureScheduler.c  textureScheduler.h
src/util/: error.h  log.h  util.c  util.h
test-maps/: big-map  creeper-map  flower-map  leftTurner-map  newmap  peekaboo-map
tutorial/: 1.yz.map  2.yz.map  3.yz.lua  3.yz.map  level1.yz.lua  level1.yz.map  level2.yz.lua  level2.yz.map  level3.yz.lua  level3.yz.map  level4.yz.lua  level4.yz.map  level5.yz.lua  level5.yz.map  lockedDoor.yz.lua  lockedDoor.yz.map  sprites.yz.cfg  tutorial.yz.lua
